--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
     <script src="css/source-sans-pro.js"></script>
+    <link href="css/styles.css" rel="stylesheet">
 </head>
 <body>
 
